--- a/style.css
+++ b/style.css
@@ -1,79 +1,159 @@
+@import url('https://fonts.googleapis.com/css2?family=Delicious+Handrawn&family=Ubuntu:ital,wght@1,300&display=swap');
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins' , sans-serif;
+    font-family: 'Delicious Handrawn', cursive;
+    font-family: 'Poppins', sans-serif;
+    font-family: 'Ubuntu', sans-serif;
 }
 
-/*google fonts*/
-@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Tilt+Prism&display=swap');
-
-/*Css variables*/
-:root{
-    --white-color:#fff;
-    --dark-color: #222;
-    --body-bg-color: #fff;
-    --section-bg-color:#202834;
-    --navigation-item-hover-color:#3b5378;
-
-    --text-shadow: 0 5px 25px rgba(0,0,0,0.1);
-    --box-shadow: 0 5px 25px rgba(0 0 0 / 20%);
-
-    --scroll-bar-color: #fff;
-    --scroll-thumb-color: #282f4e;
-    --scroll-thumb-hover-color: #454f6b;
-}
-
-/*main css*/
-body{
-    background: var(--body-bg-color);
-}
-
-/*header*/
-header{
-    z-index: 999;
+.header{
     position: fixed;
-    width: 100%;
-    height: calc(5rem + 1rem);
     top: 0;
     left: 0;
+    width: 100%;
+    padding: 25px 12.5%;
+    background-color: transparent;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 100;
 }
 
-header .nav-bar{
+body{
+    background: #020410;
+}
+.navbar a{
     position: relative;
+    font-size: 16px;
+    color: #e4e4e4;
+    text-decoration: none;
+    font-weight: 500;
+    margin-right: 30px;
+}
+.navbar a::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -6px;
     width: 100%;
+    height: 2px;
+    background: #e4e4e4;
+    border-radius: 5px;
+    transform: translateY(10px);
+    opacity: 0;
+    transition: 0.5s;
+}
+
+.navbar a:hover::after{
+    transform: translateY(0);
+    opacity: 1;
+}
+
+.search-bar{
+    width: 250px;
+    height: 45px;
+    background: transparent;
+    border: 2px solid #e4e4e4;
+    border-radius: 6px;
     display: flex;
     align-items: center;
+}
+
+.search-bar input {
+    width: 100%;
+    background: transparent;
+    border: none;
+    outline: none;
+    font-size: 16px;
+    color: #e4e4e4;
+    padding-left: 10px;
+}
+
+.search-bar input::placeholder{
+    color: #e4e4e4;
+}
+
+.search-bar button{
+    width: 40px;
+    height: 100%;
+    background: transparent;
+    display: flex;
+    border: none;
+    outline: none;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    /* margin-left: 100%;*/
+}
+.search-bar button i{
+    font-size: 22px;
+    color: #e4e4e4;
+}
+
+.container{
+    position: absolute;
+    width: 87%;
+    height: 550px;
+    background: url(background.jpg) no-repeat;
+    background-size: cover;
+    background-position: center;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 10px;
+    margin-top: 25px;
+}
+
+.container .content{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 58%;
+    height: 100%;
+    background:transparent ;
+    padding: 80px;
+    color: #e4e4e4;
+    display: flex;
     justify-content: space-between;
-    padding: 0 200px;
-    transition: 0.3s ease;
-}
-.nav-close-btn , .nav-menu-btn{
-    display: none;
+    flex-direction: column;
 }
 
-.nav-bar .logo{
-    color: var(--dark-color);
-    font-size: 1.8em;
-    font-weight: 600;
-    letter-spacing: 2px;
-    text-transform: uppercase;
-    text-decoration: none;
-    text-shadow: var(--text-shadow);
+.container .logreg-box{
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: calc(100% - 58%);
+    height: 100%;
+    background: red;
 }
 
-.navigation .nav-items a{
-    color: var(--dark-color);
-    font-size: 1rem;
-    text-decoration: none;
-    text-shadow: var(--text-shadow);
+.content .logo{
+    font-size: 30px;
 }
 
-.navigation .nav-items a i{
-    display: none;
+.text-sci h2{
+    font-size: 40px;
+    line-height: 1;
 }
-.navigation .nav-items a:not(:last-child){
-    margin-right: 45px;
+
+.text-sci h2 span{
+    font-size: 25px;
+}
+.text-sci p{
+    font-size: 16px;
+    margin: 20px 0;
+}
+
+.social-icons a i{
+     font-size: 22px;
+     color: #e4e4e4;
+     margin-right:10px ;
+     transition: .5 ease;
+}
+
+.social-icons a:hover i{
+    transform: scale(1.2);
 }
