--- a/style.css
+++ b/style.css
@@ -30,10 +30,10 @@ header{
     align-items: center;
 }
 
-header .logo{
+header .logo {
     position: relative;
     color: white;
-    font-size: 30px;
+    font-size: 60px;
     text-decoration: none;
     font-weight: 800;
     letter-spacing: 1px;
@@ -42,6 +42,7 @@ header .logo{
 header .navigation a{
     color: white;
     text-decoration: none;
+    font-size: 20px;
     font-weight: 500;
     letter-spacing: 1px;
     padding: 2px 15px;
@@ -79,6 +80,7 @@ header .navigation a:hover{
     margin-bottom: 40px;
     color: azure;
     font-size: larger;
+    word-spacing: 3px;
 }
 .content .info h2 span{
     color: white;
@@ -201,7 +203,7 @@ label{
 
 }
 
-@media(max-width: 560px){
+@media(max-width: 550px){
     .content .info h2{
         font-size: 35px;
         line-height: 40px;
